Break out sound aggregation into a separate class

--- a/Soundboard/Soundboard-Info.plist
+++ b/Soundboard/Soundboard-Info.plist
@@ -26,6 +26,10 @@
 	<true/>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
+	<key>UIStatusBarHidden</key>
+	<false/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
